# dna-ahk

./: .gitignore  Cargo.toml  README.md  basic.ahk  dna-ahk.ini  dnagui.ahk  dnamain.ahk  em-ahk.ini  em.ahk  emgui.ahk  excel.c  grab.ahk  gui.ahk  lib.ahk  record.ahk  test.ahk
Hotkey/: basic.ahk  short.ahk
Prototype/: predict_rotation.py  test.ipynb
gui/: dnagui.ahk  dnagui.d.ahk  gui.ahk
lib/: BTree.ahk  CGdip.ahk  Capture.ahk  FindText.ahk  RectOverlay.ahk  State.ahk  TextStreamDecoder.ahk  console.ahk  polyfill.ahk  print.ahk
lib/WinAPI/: Gdi32.ahk  User32.ahk
lib/aojia/: aojia.ahk  aojia.d.ahk  使用说明.chm
lib/core/: core.ahk
lib/cv2/: cv2.ahk
lib/data/: debug.ahk
lib/numahk/: numahk.ahk
lib/numahk/base/: DFAUtil.ahk  Generator.ahk  Parser.ahk  Tokenizer.ahk  c_array.ahk  const.ahk  native.ahk
lib/numahk/dll/: Numahk.cpp  Numahk.h
lib/opencv/: cvui.ahk  log.ahk  opencv.ahk
lib/vjoy/: VJoy.ahk  ahk_vjoy.cs  ahk_vjoy.csproj
lib/wincapture/: wincapture.ahk
src/: lib.rs
src/submodules/: mod.rs  predict_rotation.rs  setvol.rs
