[package]
name = "rust_ahk_dll"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System",
    "Win32_System_Com",
    "Win32_System_Variant",
    "Win32_System_Com_StructuredStorage",
    "Win32_Media",
    "Win32_Media_Audio",
    "Win32_Graphics",
    "Win32_Graphics_Gdi",
] }
image = "0.25.9"
widestring = "1.2.1"
ndarray = "0.17.1"
ndarray-stats = "0.6.0"
opencv = "0.97.2"
